--- a/assests/estilos.css
+++ b/assests/estilos.css
@@ -1,8 +1,10 @@
 
         a:link {
             text-decoration: none;
+           
         }
-             
+       
+
         .navbar {
             background: #f47f04;
             border-color: #000 !important;
@@ -40,6 +42,7 @@
             background: #f47f04;
             color: #000;
             text-align: center;
+            margin-top: 10px;
         }
 
         .corpo {
